[package]
name = "simplepir"
version = "0.1.0"
edition = "2021"

[profile.dev]
# Disable integer overflow checks.
overflow-checks = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
thiserror = "1.0.63"

