[package]
name = "simplepir"
version = "0.1.0"
edition = "2021"

[profile.dev]
# Disable integer overflow checks.
overflow-checks = false

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
thiserror = "1.0.63"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "simplepir_benchmark"
harness = false

